--- a/Sources/RRUIComponents/Info.plist
+++ b/Sources/RRUIComponents/Info.plist
@@ -15,12 +15,10 @@
 	<key>CFBundleName</key>
 	<string>$(PRODUCT_NAME)</string>
 	<key>CFBundlePackageType</key>
-	<string>$(PRODUCT_BUNDLE_PACKAGE_TYPE)</string>
+	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<real>1</real>
 	<key>CFBundleVersion</key>
-	<string>1</string>
-	<key>NSPrincipalClass</key>
-	<string>NSApplication</string>
+	<integer>1</integer>
 </dict>
 </plist>
