--- a/Tests/RRUIComponentsTests/Info.plist
+++ b/Tests/RRUIComponentsTests/Info.plist
@@ -17,8 +17,8 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<real>1</real>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<integer>1</integer>
 </dict>
 </plist>
