feat: Remove duplicate Logger and add RRFoundation dependency
- Removed duplicate Logger.swift from RRUIComponents
- Added RRFoundation v1.8.0 as dependency in Package.swift
- Updated RRUIComponents.swift to import and re-export RRFoundation
- Bumped version to 1.2.1 to reflect architectural changes
- Now using unified logging system from RRFoundation across all frameworks
- Eliminates naming conflicts and code duplication

--- a/Tests/RRUIComponentsTests/Info.plist
+++ b/Tests/RRUIComponentsTests/Info.plist
@@ -17,9 +17,8 @@
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
-	<real>1</real>
+	<string>1.2.1</string>
 	<key>CFBundleVersion</key>
 	<integer>1</integer>
 </dict>
 </plist>
-
