feat: implement comprehensive theme system with ThemeProvider
- Add Color+DesignSystem.swift with semantic color extensions
- Update ThemeProvider to use Color extensions instead of hardcoded values
- Fix all components to use ThemeProvider for dynamic theming
- Add missing OnPrimary.colorset/Contents.json
- Update RRSlider components to use theme colors
- Remove hardcoded colors and replace with theme-aware colors
- Ensure all enums receive theme parameters as requested
- Fix build errors and ensure all files are properly included
- Support app-level color customization through Colors.xcassets
- Enable automatic light/dark mode switching

--- a/project.yml
+++ b/project.yml
@@ -32,6 +32,8 @@ targets:
     deploymentTarget: "15.0"
     sources:
       - path: Sources/RRUIComponents
+    resources:
+      - path: Sources/RRUIComponents/Resources
     dependencies:
       - package: RRFoundation
     settings:
