fix: rename RRUIComponents enum to RRUIComponentsInfo to fix module interface
- Fixes Xcode build errors caused by module name/enum name conflict
- Resolves 'is not a member type' errors in generated module interface
- Updates CHANGELOG with fix details

--- a/Sources/RRUIComponents/Info.plist
+++ b/Sources/RRUIComponents/Info.plist
@@ -9,16 +9,16 @@
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<string>com.rrui.rruicomponents</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
+	<string>RRUIComponents</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.2.2</string>
+	<string>2.1.0</string>
 	<key>CFBundleVersion</key>
-	<integer>1</integer>
+	<string>2.1.0</string>
 </dict>
 </plist>
